objects/CampaignColumns__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ADDRESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New Field Added by Ankur Chopra</description>
        <label>Activity Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMPANY__c</fullName>
        <defaultValue>true</defaultValue>
        <label>COMPANY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Last_Call_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Last Call Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EMAIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAX__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OWNER__c</fullName>
        <defaultValue>true</defaultValue>
        <label>OWNER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHONE__c</fullName>
        <defaultValue>true</defaultValue>
        <label>PHONE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALUTATION__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SALUTATION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TITLE__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TITLE</label>
        <type>Checkbox</type>
    </fields>
    <label>CampaignColumns</label>
</CustomObject>